5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4127/executions/1674_1879.log
== TEST (2019-04-30 11:02:52) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x= float(input("qual o numero de horas extras"))
y= float(input("qual o numero de horas faltadas?"))

tot= x-1/4*y

if (tot>400):
	print(x,"extras e", y,"de falta")
	print("R$ 500,00")
else:
	print(x,"extras e", y,"de falta")
	print("R$ 100,00")
-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 500,00
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 11:02:59) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x= float(input("qual o numero de horas extras"))
y= float(input("qual o numero de horas faltadas?"))

tot= x-1/4*y

if (tot>400):
	print(x,"extras e", y,"de falta")
	print("R$ 500,00")
else:
	print(x,"extras e", y,"de falta")
	print("R$ 100,00")
-- EXECUTION TIME:
0.241312
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$ 500,00
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$ 100,00
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$ 100,00
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:03:04) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x= float(input("qual o numero de horas extras"))
y= float(input("qual o numero de horas faltadas?"))

tot= x-1/4*y

if (tot>400):
	print(x,"extras e", y,"de falta")
	print("R$ 500,00")
else:
	print(x,"extras e", y,"de falta")
	print("R$ 100,00")
-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 500,00
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:03:18) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x= float(input("qual o numero de horas extras"))
y= float(input("qual o numero de horas faltadas?"))

tot= x-1/4*y

if (tot>400):
	print(x,"extras e", y,"de falta")
	print("R$ 500,00")
else:
	print(x,"extras e", y,"de falta")
	print("R$ 100,00")
-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 500,00
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:03:36) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x= float(input("qual o numero de horas extras"))
y= float(input("qual o numero de horas faltadas?"))

tot= x-1/4*y
print(tot)
if (tot>400):
	print(x,"extras e", y,"de falta")
	print("R$ 500,00")
else:
	print(x,"extras e", y,"de falta")
	print("R$ 100,00")
-- OUTPUT:
415.0
420.0 extras e 20.0 de falta
R$ 500,00
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:04:32) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x= float(input("qual o numero de horas extras"))
y= float(input("qual o numero de horas faltadas?"))

tot= round(x-1/4*y)
print(tot)
if (tot>400):
	print(x,"extras e", y,"de falta")
	print("R$ 500,00")
else:
	print(x,"extras e", y,"de falta")
	print("R$ 100,00")
-- OUTPUT:
415
420.0 extras e 20.0 de falta
R$ 500,00
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 11:04:33) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x= float(input("qual o numero de horas extras"))
y= float(input("qual o numero de horas faltadas?"))

tot= round(x-1/4*y)
print(tot)
if (tot>400):
	print(x,"extras e", y,"de falta")
	print("R$ 500,00")
else:
	print(x,"extras e", y,"de falta")
	print("R$ 100,00")
-- EXECUTION TIME:
0.217697
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
415
420.0 extras e 20.0 de falta
R$ 500,00
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
376
400.5 extras e 100.0 de falta
R$ 100,00
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
289
300.0 extras e 44.0 de falta
R$ 100,00
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 11:04:34) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x= float(input("qual o numero de horas extras"))
y= float(input("qual o numero de horas faltadas?"))

tot= round(x-1/4*y)
print(tot)
if (tot>400):
	print(x,"extras e", y,"de falta")
	print("R$ 500,00")
else:
	print(x,"extras e", y,"de falta")
	print("R$ 100,00")
-- EXECUTION TIME:
0.151628
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
415
420.0 extras e 20.0 de falta
R$ 500,00
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
376
400.5 extras e 100.0 de falta
R$ 100,00
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
289
300.0 extras e 44.0 de falta
R$ 100,00
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:04:35) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x= float(input("qual o numero de horas extras"))
y= float(input("qual o numero de horas faltadas?"))

tot= round(x-1/4*y)
print(tot)
if (tot>400):
	print(x,"extras e", y,"de falta")
	print("R$ 500,00")
else:
	print(x,"extras e", y,"de falta")
	print("R$ 100,00")
-- OUTPUT:
415
420.0 extras e 20.0 de falta
R$ 500,00
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 11:04:54) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x= float(input("qual o numero de horas extras"))
y= float(input("qual o numero de horas faltadas?"))

tot= round(x-1/4*y)
	print(x,"extras e", y,"de falta")
if (tot>400):
	
	print("R$ 500,00")
else:
	
	print("R$ 100,00")
-- EXECUTION TIME:
0.163764
-- ERROR:
  File "/home/codebench/codes/1674/1879/main.py", line 6
    print(x,"extras e", y,"de falta")
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 11:05:32) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x= float(input("qual o numero de horas extras"))
y= float(input("qual o numero de horas faltadas?"))

tot= round(x-y/4)
print(x,"extras e", y,"de falta")
if (tot>400):
	
	print("R$ 500.00")
else:
	
	print("R$ 100.00")
-- EXECUTION TIME:
0.15273
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$ 500.00
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$ 100.00
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$ 100.00
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 11:06:02) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x= float(input("qual o numero de horas extras"))
y= float(input("qual o numero de horas faltadas?"))

tot= round(x-y/4)
print(x,"extras e", y,"de falta")
if (tot>400):
	
	print("R$ 500.00")
elif 0<=h<=400
	print("R$ 100.00")
-- EXECUTION TIME:
0.130343
-- ERROR:
  File "/home/codebench/codes/1674/1879/main.py", line 10
    elif 0<=h<=400
                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 11:06:06) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x= float(input("qual o numero de horas extras"))
y= float(input("qual o numero de horas faltadas?"))

tot= round(x-y/4)
print(x,"extras e", y,"de falta")
if (tot>400):
	
	print("R$ 500.00")
elif 0<=h<=400:
	print("R$ 100.00")
-- EXECUTION TIME:
0.133649
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$ 500.00
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 11:06:22) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x= float(input("qual o numero de horas extras"))
y= float(input("qual o numero de horas faltadas?"))

tot= round(x-y/4)
print(x,"extras e", y,"de falta")
if (tot>400):
	print("R$ 500.00")
elif 0<=tot<=400:
	print("R$ 100.00")
-- EXECUTION TIME:
0.128389
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$ 500.00
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$ 100.00
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$ 100.00
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:06:51) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x= float(input("qual o numero de horas extras"))
y= float(input("qual o numero de horas faltadas?"))

tot= round(x-y/4)
print(x,"extras e", y,"de falta")
if (tot>400):
	print("R$ 500.00")
elif 0<=tot<=400:
	print("R$ 100.00")
-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 500.00
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 11:06:57) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x= float(input("qual o numero de horas extras"))
y= float(input("qual o numero de horas faltadas?"))

tot= round(x-y/4)
print(x,"extras e", y,"de falta")
if (tot>400):
	print("R$ 500.00")
elif 0<=tot<=400:
	print("R$ 100.00")
-- EXECUTION TIME:
0.128075
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$ 500.00
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$ 100.00
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$ 100.00
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 11:08:15) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x= float(input("qual o numero de horas extras: "))
y= float(input("qual o numero de horas faltadas: "))

tot= round(x - y/4)
print(x,"extras e", y,"de falta")
if (tot>400):
	print("R$ 500.00")
elif 0<=tot<=400:
	print("R$ 100.00")
-- EXECUTION TIME:
0.143761
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$ 500.00
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$ 100.00
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$ 100.00
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 11:08:21) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x= float(input("qual o numero de horas extras: "))
y= float(input("qual o numero de horas faltadas: "))

tot= round(x - y/4)
print(x,"extras e", y,"de falta")
if (h>400):
	print("R$ 500.00")
elif 0<=h<=400:
	print("R$ 100.00")
-- EXECUTION TIME:
0.119005
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1674/1879/main.py", line 7, in <module>
    if (h>400):
NameError: name 'h' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 11:08:27) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x= float(input("qual o numero de horas extras: "))
y= float(input("qual o numero de horas faltadas: "))

h= round(x - y/4)
print(x,"extras e", y,"de falta")
if (h>400):
	print("R$ 500.00")
elif 0<=h<=400:
	print("R$ 100.00")
-- EXECUTION TIME:
0.151908
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$ 500.00
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$ 100.00
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$ 100.00
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:08:48) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x= float(input("qual o numero de horas extras: "))
y= float(input("qual o numero de horas faltadas: "))

h= round(x - y/4)
print(x,"extras e", y,"de falta")
if (h>400):
	print("R$ 500.00")
elif 0<=h<=400:
	print("R$ 100.00")
-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 500.00
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 11:08:53) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x= float(input("qual o numero de horas extras: "))
y= float(input("qual o numero de horas faltadas: "))

h= round(x - y/4)
print(x,"extras e", y,"de falta")
if (h>400):
	print("R$ 500.00")
elif 0<=h<=400:
	print("R$ 100.00")
-- EXECUTION TIME:
0.118712
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$ 500.00
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$ 100.00
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$ 100.00
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 11:09:14) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x= float(input("qual o numero de horas extras: "))
y= float(input("qual o numero de horas faltadas: "))

h= round(x - y/4)
print(x,"extras e", y,"de falta")
if (h>400):
	print("R$ 500.0")
elif (0<=h<=400):
	print("R$ 100.0")
-- EXECUTION TIME:
0.152528
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$ 500.0
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$ 100.0
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$ 100.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
